--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 node_modules/
-.env
 
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+s
 # Logs
 logs
 *.logs
 npm-debug.log*
+images/
