--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "redis": "^4.4.0",
     "sharp": "^0.31.1"
   },
   "main": "app.js",
